@@ -1,5 +1,10 @@
 2017-01-20  Jean Delvare  <jdelvare@suse.de>
 
+	* biosdecode.c: Decode the entry point defined in the Intel
+	  Multiprocessor specification.
+
+2017-01-20  Jean Delvare  <jdelvare@suse.de>
+
 	* dmidecode.c: Only decode one DMI table.
 	  This fixes Savannah bug #50022:
 	  https://savannah.nongnu.org/bugs/?50022
